[gd_scene load_steps=7 format=3 uid="uid://t2wgnk2pyono"]

[ext_resource type="Script" uid="uid://dfpo4jlitdpyf" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://bfydf8haqsjto" path="res://art/playerGrey_walk1.png" id="2_hqtel"]
[ext_resource type="PackedScene" uid="uid://cwdins0unq06a" path="res://projectile.tscn" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://bn0n0uh4hsyxe" path="res://art/playerGrey_walk2.png" id="3_sweqy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hqtel")
}, {
"duration": 1.0,
"texture": ExtResource("3_sweqy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1jxqw"]
radius = 52.0
height = 126.0

[node name="Player" type="Area2D"]
collision_mask = 2
script = ExtResource("1_i3pqv")
Bullet = ExtResource("2_sweqy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2hs0m")
animation = &"walk"
frame = 1
frame_progress = 0.0021779

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1jxqw")

[node name="InvulTimer" type="Timer" parent="."]
one_shot = true

[node name="WeaponCD" type="Timer" parent="."]
wait_time = 0.5

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
[connection signal="timeout" from="WeaponCD" to="." method="_on_weapon_cd_timeout"]
